Fix the wrong padding

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header ul.header-menu li a {
 }
 
 .breadcrumb-inner{
-    padding: 18px 5px;
+    padding: 10px 18px;
 }
 
 h1.post-title{
